<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2012 Kaloyan Raev.

     All rights reserved. This program and the accompanying materials
     are made available under the terms of the Eclipse Public License v1.0
     which accompanies this distribution, and is available at
     http://www.eclipse.org/legal/epl-v10.html

     Contributors:
       Kaloyan Raev - initial implementation
-->

<resources>
    <string name="app_name">Eclipse UI Tips</string>
    <string name="notify_ticker_text">Eclipse UI Tip of the Day</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="pref_tip_title">Tip of the day</string>
    <string name="pref_tip_summary">Show notification with random guideline every day</string>
    <string name="pref_time_title">Set time</string>
    <string name="pref_wiki_title">Wiki</string>
    <string name="pref_settings_title">Settings</string>
    <string name="pref_learn_title">Learn</string>
    <string name="pref_browse_title">Browse</string>
    <string name="pref_random_title">Random</string>
</resources>