<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2012 Kaloyan Raev.

     All rights reserved. This program and the accompanying materials
     are made available under the terms of the Eclipse Public License v1.0
     which accompanies this distribution, and is available at
     http://www.eclipse.org/legal/epl-v10.html

     Contributors:
       Kaloyan Raev - initial implementation
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
        android:key="learn"
        android:title="@string/pref_learn_title">
        
        <name.raev.kaloyan.android.eclipseuitips.BrowseAllGuidelinesPreference
            android:title="@string/pref_browse_title"
        />
        
        <name.raev.kaloyan.android.eclipseuitips.OpenRandomGuidelinePreference
            android:title="@string/pref_random_title"
        />
        
        <name.raev.kaloyan.android.eclipseuitips.OpenUrlPreference
	        android:title="@string/pref_wiki_title"
	        url="http://wiki.eclipse.org/User_Interface_Guidelines"
	    />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="settings"
        android:title="@string/pref_settings_title">
        
		<CheckBoxPreference
	        android:key="tip_of_the_day"
			android:title="@string/pref_tip_title"
			android:summary="@string/pref_tip_summary"
			android:defaultValue="false"
		/>
		
		<name.raev.kaloyan.android.eclipseuitips.TimePreference
		    android:key="time"
		    android:title="@string/pref_time_title"
		    android:positiveButtonText="@string/set"
		    android:negativeButtonText="@string/cancel"
		    android:dependency="tip_of_the_day"
		/>
		
    </PreferenceCategory>

</PreferenceScreen>